fix(blog): increase featured post title width on mobile

--- a/src/assets/css/blog.scss
+++ b/src/assets/css/blog.scss
@@ -105,6 +105,9 @@
 
     .featured-blog-post {
       margin-bottom: 80px;
+      h3 {
+        max-width: 100%;
+      }
 
       .post-image-container {
         width: 100%;
